# anki

./: .bazelrc  BUILD.bazel  Cargo.toml  Dockerfile  Makefile  WORKSPACE  defs.bzl  desktop_extradefs.bzl  desktop_extradeps.bzl  late_deps.bzl  pylib_defs.bzl  pylib_deps.bzl  pylib_late_deps.bzl  python.bzl  repos.bzl  run
.devcontainer/: Dockerfile  devcontainer.json
buildconfig/: build.sh  configure-5.15.1.sh  configure.sh
cargo/: crates.bzl  licenses.json
cargo/remote/: BUILD.askama-0.10.5.bazel  BUILD.askama_shared-0.11.1.bazel  BUILD.lexical-core-0.7.4.bazel  BUILD.winapi-0.3.9.bazel
pip/: BUILD.bazel  BUILD.typed_ast  requirements.in  requirements.txt
pip/pyqt5/: install_pyqt5.py
pylib/: BUILD.bazel  Makefile  mypy.ini  protobuf.bzl  requirements.dev
pylib/anki/: BUILD.bazel  rsbackend.py
pylib/rsbridge/: BUILD.bazel  Cargo.toml
pylib/rsbridge/cargo/: BUILD.bazel
pylib/tests/: run_format.py
pylib/tools/: BUILD.bazel
qt/: BUILD.bazel  bazelfixes.py  mypy.ini  requirements.qt
qt/aqt/: BUILD.bazel  progress.py
qt/aqt/forms/: build_ui.py
qt/tests/: run_format.py
rslib/: BUILD.bazel  Cargo.toml
rslib/cargo/: BUILD.bazel
rslib/src/search/: parser.rs
rspy/: Cargo.toml  Makefile
rspy/src/: lib.rs
scripts/: buildinfo.py
tools/pip_package/: BUILD  build_pip_package.sh
